# thesis-ukr-energy-system-damage

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
notebooks/: sample_thesis_ukr_energy_system_damage.ipynb
src/thesis_ukr_energy_system_damage/: __init__.py
tests/: test_thesis_ukr_energy_system_damage.py
